--- a/index.html
+++ b/index.html
@@ -4,26 +4,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/main.css">
+    <link href="https://fonts.googleapis.com/css2?family=Karla:ital@1&family=Rubik&display=swap" rel="stylesheet">
     <title>Document</title>
 </head>
 <body>
     <div class="container">
         <header>
             <nav>
+                <img src="img/exclude.svg" alt="logo">
                 <a href="#">Home</a>
-                <a href="#">contact</a>
-                <a href="#">about</a>
+                <a href="#">Contact</a>
+                <a href="#">About</a>
+                <a href="#">Find us</a>
             </nav>
         </header>
         <main>
             <section class="top">
-                <h1>Välkommen</h1>
+                <h2>Welcome to our gallery</h2>
             </section>
             <section class="gallery">
                 <article>
                     <img src="img/img1.jpg" alt="image">
                     <img src="img/img2.jpg" alt="image">
                     <img src="img/img3.jpg" alt="image">
+                    <img src="img/img10.jpg" alt="image">
                 </article>
                 <article>
                     <img src="img/img4.jpg" alt="image">
@@ -34,7 +38,6 @@
                     <img src="img/img7.jpg" alt="image">
                     <img src="img/img8.jpg" alt="image">
                     <img src="img/img9.jpg" alt="image">
-                    <img src="img/img10.jpg" alt="image">
                 </article>
             </section>
         </main>
