added a simple map page, updated css, changed som text around

--- a/index.html
+++ b/index.html
@@ -5,22 +5,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/main.css">
     <link href="https://fonts.googleapis.com/css2?family=Karla:ital@1&family=Rubik&display=swap" rel="stylesheet">
-    <title>Document</title>
+    <title>Gallery</title>
 </head>
 <body>
     <div class="container">
         <header>
             <nav>
-                <img src="img/exclude.svg" alt="logo">
-                <a href="#">Home</a>
-                <a href="#">Contact</a>
+                <img src="img/logo.svg" alt="logo">
+                <a href="/index.html">Home</a>
+                <a href="#">Jobs</a>
                 <a href="#">About</a>
-                <a href="#">Find us</a>
+                <a href="/map.html">Find us</a>
             </nav>
         </header>
         <main>
             <section class="top">
                 <h2>Welcome to our gallery</h2>
+                <p>Take a look at a select few of our artworks:</p>
             </section>
             <section class="gallery">
                 <article>
@@ -42,7 +43,7 @@
             </section>
         </main>
         <footer>
-            <p>tillbaka</p>
+            <p>Back to the top</p>
         </footer>
     </div>
 </body>
