--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
         <header>
             <nav>
                 <img src="img/logo.svg" alt="logo">
-                <a href="/index.html">Home</a>
+                <a href="index.html">Home</a>
                 <a href="#">Jobs</a>
                 <a href="#">About</a>
-                <a href="/map.html">Find us</a>
+                <a href="map.html">Find us</a>
             </nav>
         </header>
         <main>
